feat: develop profile screen
